# TE2-DatosII

./: CMakeLists.txt
Facade/: MisDepartment.cpp
Observer/: main.cpp
Observer/src/: Client.cpp
include/: Client.h  Client.hpp  Observer.h  Subject.h  WeatherData.h  WeatherData.hpp
src/: Client.cpp  WeatherData.cpp
